--- a/index.html
+++ b/index.html
@@ -196,7 +196,17 @@
       </div>
       </section>
       <section class="programs-set">
-
+        <div class="main-title-porgrams-set relative top-16">
+          <h3 class="text-left ml-12 text-3xl text-[#68CBDB]">
+            CREATIVE AND TALENTED
+          </h3>
+          <p class="text-4xl font-bold ml-12">We Work On Different Fields</p>
+          <div dir="rtl" class="button-container flex -mt-18 mr-28">
+            <button class="bg-[#DC2B44] hover:bg-blue-700 w-[140px] relative t-[-5rem] text-sm text-white font-bold py-2 px-4 rounded uppercase">
+              let's talk <i class="fa-solid fa-circle-play"></i>
+            </button>
+          </div>
+        </div>
       </section>
   
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
